Revert "Open result by default"
Open result by default doesn't work :'(

This reverts commit df8cce7c2464a9de048e1c08da361cc0377482b5.

--- a/bloodcell-example.html
+++ b/bloodcell-example.html
@@ -4,6 +4,6 @@
     <title>Bloodcell example</title>
   </head>
   <body>
-    <script async src="//jsfiddle.net/vslutov/wpq6q8e5/3/embed/js,html,result/#Result"></script>
+    <script async src="//jsfiddle.net/vslutov/wpq6q8e5/3/embed/js,html,result/"></script>
   </body>
 </html>
