--- a/bloodcell-example.html
+++ b/bloodcell-example.html
@@ -3,7 +3,7 @@
   <head>
     <title>Bloodcell example</title>
   </head>
-  <body>
-    <script async src="//jsfiddle.net/vslutov/wpq6q8e5/embed/js,html,result/"></script>
+  <body style="margin:0px;padding:0px;overflow:hidden">
+    <iframe frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%" src="//jsfiddle.net/vslutov/wpq6q8e5/embedded/js,html,result/" allowpaymentrequest allowfullscreen="allowfullscreen"></iframe>
   </body>
 </html>
