--- a/bloodcell-example.html
+++ b/bloodcell-example.html
@@ -4,6 +4,6 @@
     <title>Bloodcell example</title>
   </head>
   <body>
-    <iframe frameborder="0" style="position: fixed;background: #000;top: 0; right: 0;bottom: 0; left: 0;width: 100%;height: 100%;" src="//jsfiddle.net/vslutov/wpq6q8e5/embedded/js,html,result/" allowpaymentrequest allowfullscreen="allowfullscreen"></iframe>
+    <iframe frameborder="0" style="position:fixed;top:0;right:0;bottom:0;left:0;width:100%;height:100%;" src="//jsfiddle.net/vslutov/wpq6q8e5/embedded/js,html,result/" allowpaymentrequest allowfullscreen="allowfullscreen"></iframe>
   </body>
 </html>
